--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </header>
         <section class="section_hero">
           <div class="section_hero_left">
-            <h1>Your Journey, Your Car, Your Way Alex</h1>
+            <h1>Your Journey, Your Car, Your Way</h1>
             <p>
               Experience the ultimate freedom of choice with GoCar - tailor your
               adventure by choosing from our premium fleet of vehicles.
@@ -781,7 +781,7 @@
 <!-- 
 GIT - Version Control (Versiyalar boshqaruvi)
 GITHUB - Globalniy project cloud
-NETLIFY - 
+NETLIFY
 -->
 
 <!-- 
